fix(html): properly handle retry button highlight, fixing contrast issue

--- a/packages/html-reporter/src/tabbedPane.css
+++ b/packages/html-reporter/src/tabbedPane.css
@@ -39,7 +39,7 @@
   outline: none;
 }
 
-.tabbed-pane-tab-element {
+.tabbed-pane-tab-wrapper {
   padding: 4px 8px 0 8px;
   margin-right: 4px;
   cursor: pointer;
@@ -53,18 +53,29 @@
   height: 100%;
 }
 
+.tabbed-pane-tab-element {
+  height: 30px;
+  padding: 0 8px;
+  border-radius: 0.375rem;
+}
+
+.tabbed-pane-tab-element:hover {
+  background-color: #656c7633;
+}
+
+.tabbed-pane-tab-element.selected {
+  font-weight: 600;
+}
+
 .tabbed-pane-tab-label {
   max-width: 250px;
   white-space: pre;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: center;
   display: inline-block;
 }
 
-.tabbed-pane-tab-element.selected {
+.tabbed-pane-tab-wrapper.selected {
   border-bottom-color: #666;
-}
-
-.tabbed-pane-tab-element:hover {
-  color: #333;
 }
